# GBEmu

./: .gitignore  README.md  build.sh
core/: Cargo.toml
core/src/: lib.rs  wasm.rs
core/src/apu/: mod.rs
core/src/cartridge/: mod.rs
core/src/cpu/: cb_instructions.rs  instructions.rs  mod.rs
core/src/joypad/: mod.rs
core/src/mmu/: mod.rs
core/src/ppu/: mod.rs
core/src/serial/: mod.rs
core/src/timer/: mod.rs
web/: .gitignore  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: Controls.tsx  EmulatorContext.tsx  GameBoyShell.tsx  Header.tsx  RomLoader.tsx  SaveManager.tsx  Screen.tsx  SettingsPanel.tsx  ThemeProvider.tsx  index.ts
web/hooks/: index.ts  useAudio.ts  useSaveData.ts
web/lib/wasm/: .gitignore  gbemu_core.d.ts  gbemu_core.js  gbemu_core_bg.wasm  gbemu_core_bg.wasm.d.ts  package.json
web/public/: manifest.json  sw.js
web/public/wasm/: gbemu_core_bg.wasm
